--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,15 @@ footer {
 
   #column-3 {
     background-color: orange;
+    width: 100%;
   }
 
   footer {
     background-color: purple;
+  }
+
+  .col-3 {
+    width: 50%;
   }
   
 }
@@ -98,10 +103,15 @@ footer {
 
   #column-3 {
     background-color: lightgoldenrodyellow;
+    width: 33.3%;
   }
 
   footer {
     background-color: lightslategray;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
    
 }
